.helm/adhoc/old-hostname.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spatial-old-hostname-ingress
  labels:
    name: spatial-old-hostname-ingress
spec:
  rules:
  - host: hbp-spatial-backend.apps.hbp.eu
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: prod-hbp-spatial-backend
            port: 
              number: 8080
  tls:
  - secretName: spatial-old-hostname-secret
    hosts:
    - hbp-spatial-backend.apps.hbp.eu
